--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "wait-on": "^9.0.3"
   },
   "dependencies": {
+    "better-sqlite3": "^12.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
