Add browser source selector UI to Cookies Monitor
Features:
✅ Browser/profile dropdown in toolbar
✅ Show browser icons (Chrome 🌐, Firefox 🦊, Edge 🔷, Brave 🦁)
✅ Display profile names (Default, Profile 1, etc.)
✅ Real-time cookie updates on source change
✅ Read-only indicator for browser sources
✅ Disable delete/clear buttons for browser sources

UI Changes:
- Added source selector to CookiesToolbar with dropdown
- Load browser profiles on component mount
- Show "Read-Only" badge for external browsers
- Disable individual delete buttons in CookiesList
- Disable "Clear All" button for browser sources
- Alert users when trying to delete browser cookies

Context Updates:
- Added browserProfiles and selectedSource state
- Added loadBrowserProfiles() function
- Added setSelectedSource() with auto-refresh
- Source change triggers cookie reload

User Experience:
- Seamless switching between Electron and browser cookies
- Clear visual feedback for read-only mode
- Helpful tooltips on disabled actions
- Browser icons for easy identification

Bug Fix:
- Remove invalid itemKey prop from PortsList VirtualList

Complete Task 18: Browser source selector UI ✅

--- a/tsconfig.main.json
+++ b/tsconfig.main.json
@@ -4,7 +4,8 @@
     "module": "CommonJS",
     "outDir": "./dist",
     "noEmit": false,
-    "types": ["node"]
+    "types": ["node"],
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
-  "include": ["src/main/**/*", "src/preload/**/*"]
+  "include": ["src/main/**/*", "src/preload/**/*", "src/types/**/*"]
 }
